--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # User config
-author: "Pineapple"
-tagline: "Pineapple Certfied Jekyll Theme"
-description: "In 1493, explorer Christopher Columbus found pineapples on Guadeloupe Island in the Caribbean. Pineapple on pizza soon followed..."
-keywords: "Pineapple, Pineapple Pizza, Pineapple House"
+author: "Diele"
+tagline: "Diele's webpagee"
+description: "..."
 email: "pineapple@example.com"
 linkedin: "https://www.linkedin.com/"
 twitter: "https://twitter.com/"
