--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter: "https://twitter.com/"
 github: "https://github.com/"
 
 # Site config
-baseurl: ""
+baseurl: "/website"
 highlighter: rouge
 sass:
   sass_dir: assets/scss
