--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
 author: "Diele Lobo"
 tagline: "Diele's webpagee"
-description: "..."
+description: "My research..."
 email: "lobo0010@umn.edu"
 twitter: "https://twitter.com/dielelobo"
 
