--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # User config
 author: "Diele Lobo"
-tagline: "Diele's webpagee"
+tagline: "Diele's webpage"
 description: "I am a doctoral candidate in Conservation Science at the University of Minnesota. My research interests center around the social dimensions of biodiversity conservation and community resilience to global environmental change."
 email: "lobo0010@umn.edu"
 twitter: "https://twitter.com/dielelobo"
